--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aplikasi Kemahiran Membaca Bahasa Melayu</title>
+    <title>Pustaka Melayu</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
@@ -14,30 +14,35 @@
             --background-color: #f0f0f0;
             --text-color: #333;
             --container-bg: #ffffff;
+            --input-bg: rgba(255, 255, 255, 0.8);
         }
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
             margin: 0;
-            padding: 20px;
-            background-color: var(--background-color);
+            padding: 0;
+            background: url('https://source.unsplash.com/1600x900/?books') no-repeat center center/cover;
             color: var(--text-color);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
 
         .container {
             max-width: 800px;
-            margin: auto;
+            width: 100%;
             background: var(--container-bg);
             padding: 30px;
             border-radius: 15px;
             box-shadow: 0 0 20px rgba(0,0,0,0.1);
             transition: all 0.3s ease;
+            text-align: center;
         }
 
         h1, h2 {
             color: var(--primary-color);
-            text-align: center;
         }
 
         h1 {
@@ -50,53 +55,38 @@
             margin-top: 30px;
         }
 
-        .level-select, .material-select {
-            margin-bottom: 30px;
+        .login-container {
+            display: none;
         }
 
-        select {
-            width: 100%;
-            padding: 12px;
-            font-size: 16px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            background-color: #f8f8f8;
-            cursor: pointer;
-            transition: all 0.3s ease;
+        .main-container {
+            display: none;
         }
 
-        select:hover, select:focus {
-            border-color: var(--primary-color);
-            outline: none;
+        .visible {
+            display: block;
         }
 
-        .reading-material {
-            background-color: #f9f9f9;
-            padding: 20px;
-            border-radius: 10px;
-            margin-bottom: 30px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            transition: all 0.3s ease;
-        }
-
-        input[type="text"], input[type="password"], input[type="date"] {
-            width: 100%;
+        input[type="text"], input[type="password"] {
+            width: calc(100% - 40px);
             padding: 10px;
-            margin-top: 10px;
+            margin: 10px 0;
             border: 1px solid #ddd;
             border-radius: 5px;
             font-size: 16px;
+            background: var(--input-bg);
             transition: all 0.3s ease;
         }
 
-        input[type="text"]:focus, input[type="password"]:focus, input[type="date"]:focus {
+        input[type="text"]:focus, input[type="password"]:focus {
             border-color: var(--primary-color);
             box-shadow: 0 0 5px rgba(76, 175, 80, 0.5);
         }
 
         button {
             display: block;
-            width: 100%;
+            width: calc(100% - 40px);
+            margin: 20px auto;
             padding: 12px;
             background-color: var(--primary-color);
             color: white;
@@ -105,7 +95,6 @@
             cursor: pointer;
             font-size: 18px;
             transition: background-color 0.3s ease, transform 0.1s ease;
-            margin-top: 20px;
         }
 
         button:hover {
@@ -114,16 +103,6 @@
 
         button:active {
             transform: scale(0.98);
-        }
-
-        #result {
-            margin-top: 30px;
-            font-weight: bold;
-            text-align: center;
-            padding: 15px;
-            background-color: #e8f5e9;
-            border-radius: 8px;
-            transition: all 0.3s ease;
         }
 
         .progress-bar {
@@ -156,7 +135,8 @@
         }
 
         .difficult-word {
-            display: inline-block;
+            display: inline-flex;
+            align-items: center;
             background-color: #ffcc80;
             margin: 5px;
             padding: 5px 10px;
@@ -168,12 +148,13 @@
             background-color: #ffb74d;
         }
 
-        .login-container, .main-container {
-            display: none;
+        .speaker-icon {
+            margin-left: 10px;
+            cursor: pointer;
         }
 
-        .visible {
-            display: block;
+        .login-container .container {
+            background: rgba(255, 255, 255, 0.9);
         }
 
         .button-group {
@@ -188,6 +169,19 @@
             font-size: 14px;
         }
 
+        .reset-password-link {
+            display: block;
+            margin-top: 10px;
+            color: var(--primary-color);
+            cursor: pointer;
+            text-decoration: underline;
+            transition: color 0.3s ease;
+        }
+
+        .reset-password-link:hover {
+            color: var(--secondary-color);
+        }
+
         @media (max-width: 600px) {
             .container {
                 padding: 20px;
@@ -198,12 +192,17 @@
             h2 {
                 font-size: 1.5em;
             }
+            .small-button {
+                width: 48%;
+                padding: 8px;
+                font-size: 12px;
+            }
         }
     </style>
 </head>
 <body>
     <div class="container login-container visible">
-        <h1>Log Masuk</h1>
+        <h1>Pustaka Melayu</h1>
         <div class="user-controls">
             <input type="text" id="login-username" placeholder="Masukkan nama pengguna">
             <input type="password" id="login-password" placeholder="Masukkan kata laluan">
@@ -213,7 +212,7 @@
     </div>
 
     <div class="container main-container">
-        <h1>Aplikasi Kemahiran Membaca Bahasa Melayu</h1>
+        <h1>Pustaka Melayu</h1>
         
         <div class="level-select">
             <h2>Pilih Tahap:</h2>
@@ -406,6 +405,16 @@
             wordElement.onclick = function() {
                 removeDifficultWord(wordElement);
             };
+
+            const speakerIcon = document.createElement('span');
+            speakerIcon.className = 'speaker-icon';
+            speakerIcon.innerHTML = '🔊'; // Using a Unicode speaker icon
+            speakerIcon.onclick = function(event) {
+                event.stopPropagation(); // Prevent the word from being removed
+                speakWord(word);
+            };
+
+            wordElement.appendChild(speakerIcon);
             difficultWordsList.appendChild(wordElement);
 
             const user = auth.currentUser;
@@ -435,7 +444,7 @@
             const username = user.email.split('@')[0];
             const selectedMaterial = document.getElementById('material-selector').value;
 
-            const word = element.textContent;
+            const word = element.textContent.replace('🔊', '').trim();
             database.ref('users/' + username + '/difficultWords/' + selectedMaterial).orderByValue().equalTo(word).once('value', snapshot => {
                 const updates = {};
                 snapshot.forEach(child => {
@@ -450,6 +459,13 @@
                     }
                 });
             });
+        }
+
+        // Text-to-Speech for difficult words
+        function speakWord(word) {
+            const utterance = new SpeechSynthesisUtterance(word);
+            utterance.lang = 'ms-MY'; // Set the language to Malay
+            speechSynthesis.speak(utterance);
         }
 
         // Save progress
@@ -528,6 +544,16 @@
                     wordElement.onclick = function() {
                         removeDifficultWord(wordElement);
                     };
+
+                    const speakerIcon = document.createElement('span');
+                    speakerIcon.className = 'speaker-icon';
+                    speakerIcon.innerHTML = '🔊'; // Using a Unicode speaker icon
+                    speakerIcon.onclick = function(event) {
+                        event.stopPropagation(); // Prevent the word from being removed
+                        speakWord(word);
+                    };
+
+                    wordElement.appendChild(speakerIcon);
                     difficultWordsList.appendChild(wordElement);
                 });
             });
